tests/neg/toplevel-privates/Test_2.scala
package q

import p.*

val x1 = x    // error: not found

val y1 = y    // ok

val xx1 = xx  // error: not found

val yy1 = yy  // ok

val c = new C // error: not found
